# RayTracer-Book

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: camera.h.D87AF94A5AB1F83F.idx  color.cpp.D7084BBC397B5922.idx  color.h.9BA949B8A32AE587.idx  hittable.h.3DDAA33E2CA938AC.idx  hittable_list.h.A03A640647CB88BA.idx  interval.h.7F200AECBA8EECB0.idx  main.cpp.92FDA9F341495E79.idx  ray.h.A8A0F9EFE4B0C600.idx  rt.h.A339573805003259.idx  sphere.h.BD469E6853F5C3A5.idx  vec3.h.8919ABB94208AFE5.idx
src/: camera.h  color.cpp  color.h  hittable.h  hittable_list.h  interval.cpp  interval.h  main.cpp  ray.h  rt.h  sphere.h  vec3.h
